@@ -1,3 +1,8 @@
+2002-02-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* FilterParser.py (FilterParser.read): Partially restore old
+	behavior: allow missing filter files, but not IOErrors.
+
 2002-02-20  Tim Legant  <tim@catseye.net>
 
 	* FilterParser.py (Error): Moved __repr__ and __str__ to
